#23 - Traits now accept levels, levelled cost, modifiers, and multipliers.

--- a/templates/actor/actor-sheet.html
+++ b/templates/actor/actor-sheet.html
@@ -311,7 +311,7 @@
 										</td>
 										<td class="item-points" style="width: 4em;">
 											<div class="item-notes">
-												{{item.system.points}}
+												{{item.system.levelledPoints.totalPoints}}
 											</div>
 										</td>
 
