#21 - Tweaked input validation for Traits. Multipliers is now a number input so entries like x1/5 will be rejected. Levels now are forced to be 0 or positive. Multipliers are passed directly after an undefined check instead of getting eval()

--- a/templates/item/Trait-sheet.html
+++ b/templates/item/Trait-sheet.html
@@ -61,7 +61,7 @@
                     Net Modifier
                 </td>
                 <td>
-                    <input type="text" name="system.levelledPoints.netModifier" value="{{item.system.levelledPoints.netModifier}}" placeholder="100" data-dtype="Number"/>
+                    <input type="number" name="system.levelledPoints.netModifier" value="{{item.system.levelledPoints.netModifier}}" placeholder="100" data-dtype="Number"/>
                 </td>
             </tr>
             <tr>
@@ -69,7 +69,7 @@
                     Multiplier (Like for Alternative Abilities, or Character Point Powered Abilities).
                 </td>
                 <td>
-                    <input type="text" name="system.levelledPoints.totalMultipliers" value="{{item.system.levelledPoints.totalMultipliers}}" placeholder="1"/>
+                    <input type="text" name="system.levelledPoints.totalMultipliers" value="{{item.system.levelledPoints.totalMultipliers}}" placeholder="1" data-dtype="Number"/>
                 </td>
             </tr>
             <tr>
