Renamed the info pane

--- a/templates/actor/Simple Vehicle-sheet.html
+++ b/templates/actor/Simple Vehicle-sheet.html
@@ -480,7 +480,7 @@
             {{/if}}
           </div>
           <div style="width: 50%;">
-            <h2 class="bold" style="text-align: center;">What The Fuck Is This Shit?</h2>
+            <h2 class="bold" style="text-align: center;">Info</h2>
             <div class="equipment-info-container">{{{actor.system.info}}}</div>
           </div>
         </div>
