--- a/templates/item/Custom Armour-sheet.html
+++ b/templates/item/Custom Armour-sheet.html
@@ -500,7 +500,7 @@
                         </table>
                     </div>
                     <div style="width: 50%;">
-                        <h2 class="bold" style="text-align: center;">What The Fuck Is This Shit?</h2>
+                        <h2 class="bold" style="text-align: center;">Info</h2>
                         <div class="equipment-info-container">{{{system.info}}}</div>
                     </div>
                 </div>
@@ -514,7 +514,7 @@
                 <div>
                     <div>
                         <div>
-                            <h2 class="bold" style="text-align: center;">What The Fuck Is This Shit?</h2>
+                            <h2 class="bold" style="text-align: center;">Info</h2>
                             <div class="equipment-info-container">{{{system.info}}}</div>
                         </div>
                     </div>
@@ -873,7 +873,7 @@
                         </div>
                     </div>
                     <div style="width: 50%;">
-                        <h2 class="bold" style="text-align: center;">What The Fuck Is This Shit?</h2>
+                        <h2 class="bold" style="text-align: center;">Info</h2>
                         <div class="equipment-info-container">{{{system.info}}}</div>
                     </div>
                 </div>
