--- a/templates/item/Custom Weapon-sheet.html
+++ b/templates/item/Custom Weapon-sheet.html
@@ -1036,7 +1036,7 @@
                         </div>
                     </div>
                     <div style="width: 50%;">
-                        <h2 class="bold" style="text-align: center;">What The Fuck Is This Shit?</h2>
+                        <h2 class="bold" style="text-align: center;">Info</h2>
                         <div class="equipment-info-container">{{{item.system.info}}}</div>
                     </div>
                 </div>
@@ -1047,7 +1047,7 @@
         <div class="tab stats" data-tab="materials" data-group="primary">
             <h2 class="bold">Material Catalogue</h2>
             <div>
-                <h2 class="bold" style="text-align: center;">What The Fuck Is This Shit?</h2>
+                <h2 class="bold" style="text-align: center;">Info</h2>
                 <div class="equipment-info-container">{{{item.system.info}}}</div>
             </div>
             <div class="tab">
@@ -2267,7 +2267,7 @@
                         </div>
                     </div>
                     <div style="width: 50%;">
-                        <h2 class="bold" style="text-align: center;">What The Fuck Is This Shit?</h2>
+                        <h2 class="bold" style="text-align: center;">Info</h2>
                         <div class="equipment-info-container">{{{item.system.info}}}</div>
                     </div>
                 </div>
@@ -2769,7 +2769,7 @@
                         </table>
                     </div>
                     <div style="width: 50%;">
-                        <h2 class="bold" style="text-align: center;">What The Fuck Is This Shit?</h2>
+                        <h2 class="bold" style="text-align: center;">Info</h2>
                         <div class="equipment-info-container">{{{item.system.info}}}</div>
                     </div>
                 </div>
