--- a/templates/item/Travel Fare-sheet.html
+++ b/templates/item/Travel Fare-sheet.html
@@ -230,7 +230,7 @@
 
                     </div>
                     <div style="width: 50%;">
-                        <h2 class="bold" style="text-align: center;">What The Fuck Is This Shit?</h2>
+                        <h2 class="bold" style="text-align: center;">Info</h2>
                         <div class="equipment-info-container">{{{item.system.info}}}</div>
                     </div>
                 </div>
