--- a/templates/actor/Simple Vehicle-sheet.html
+++ b/templates/actor/Simple Vehicle-sheet.html
@@ -2,11 +2,14 @@
   <div id="sheet">
 
     {{!-- Sheet Header --}}
-    <header class="sheet-header">
+    <header class="sheet-header" style="background-color: fuchsia">
       <div style="flex: none; !important;">
         <img class="portrait" src="{{actor.img}}" data-edit="img" title="{{actor.name}}" />
       </div>
       <div style="flex: 5 !important;">
+        <h1 style="text-align: center; font-size: xx-large; font-weight: bold; text-decoration: underline;">
+          GO AWAY. NONE OF THIS WORKS.
+        </h1>
         <h1 style="text-align: center; font-size: xx-large; font-weight: bold; text-decoration: underline;">
           {{actor.name}}
         </h1>
